<resources>

    <string name="emailDescription">Enter your email address</string>
    <string name="Email">Type email here</string>
    <string name="name">Enter Your name</string>
    <string name="Password">Enter Your Password:</string>
    <string name="yourProfile">Your Profile</string>
    <string name="yourPicture">Your Picture:</string>
    <string name="PictureInstruction">Click the button above to take the picture</string>
    <string name="description">"this is the picture "</string>
    <string name="Button">Login</string>
    <string name="sendButton">Send</string>
    <string name="receiveButton">Receive</string>
    <string name="hint">Type here</string>
    <string name="chatRoom">Go to Chat</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="MakeChoice">Make a choice</string>
    <string name="delete">Do you want to delete a row</string>
    <string name="app_name">DhruvAndroid</string>
</resources>